Fixed alignment styling on search results

--- a/themes/whitelabel/css/Sass/template/pages/_search.scss
+++ b/themes/whitelabel/css/Sass/template/pages/_search.scss
@@ -14,6 +14,7 @@
 	h3 {
 		font-weight: 100;
 		display: inline-block;
+		margin-left: 15px;
 		
 		a {
 			&:hover {
@@ -65,10 +66,12 @@
 	}
 
 	.btn {
-		background: $white;
-		height: 50px;
-		border: 2px solid #585956;
+		background: #f1f2f2;
+		height: 44px;
+		border: 1px solid #e4e6e6;
 		border-left: none;
+		border-radius: 6px;
+		left: -20px;
 	}
 
 	button {
@@ -84,7 +87,7 @@
 
 	.search-result-arrow {
 		p {
-			margin-top: 100%;
+			margin-top: 45px;
 			margin-left: 50%;
 			color: $black;
 		}
