--- a/themes/whitelabel/css/main.css
+++ b/themes/whitelabel/css/main.css
@@ -1012,7 +1012,8 @@ footer {
   padding-bottom: 20px; }
 #search-page h3 {
   font-weight: 100;
-  display: inline-block; }
+  display: inline-block;
+  margin-left: 15px; }
   #search-page h3 a:hover {
     text-decoration: none; }
 #search-page h4 {
@@ -1045,17 +1046,19 @@ footer {
   color: #BFB9B6;
   display: block; }
 #search-page .btn {
-  background: #FFFFFF;
-  height: 50px;
-  border: 2px solid #585956;
-  border-left: none; }
+  background: #f1f2f2;
+  height: 44px;
+  border: 1px solid #e4e6e6;
+  border-left: none;
+  border-radius: 6px;
+  left: -20px; }
 #search-page button {
   margin-bottom: 40px; }
 #search-page .search-result-heading h5 {
   display: inline-block;
   margin-left: 20px; }
 #search-page .search-result-arrow p {
-  margin-top: 100%;
+  margin-top: 45px;
   margin-left: 50%;
   color: #000000; }
 
